<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_apply"
        android:title="@string/action_apply"
        android:icon="@drawable/ic_baseline_check_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_select_language"
        android:title="@string/action_select_language"
        android:icon="@drawable/ic_baseline_translate_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        android:icon="@drawable/ic_baseline_upload_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        android:icon="@drawable/ic_baseline_download_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_configure_layout"
        android:title="@string/action_configure_layout"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_dump"
        android:title="@string/action_dump"
        app:showAsAction="never"
        />
</menu>