<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            app:menu="@menu/menu_main"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/last_config_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_last_config"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/item_margin"
                    android:text="@string/title_last_config"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_config_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/item_margin"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_config_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/item_margin"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    />
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/button_apply_last_config"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/button_apply_last_config"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_demo_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_launch_heater"
            app:layout_constraintBottom_toTopOf="@id/button_socket"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_socket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_launch_socket"
            app:layout_constraintBottom_toTopOf="@id/button_demo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_launch_demo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>