<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/type_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_margin"
        android:layout_marginVertical="@dimen/list_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_margin"
        android:layout_marginVertical="@dimen/list_margin"
        android:hint="@string/title_name"
        app:layout_constraintTop_toBottomOf="@id/type_info"
        app:layout_constraintBottom_toTopOf="@id/div1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dividerInsetStart="@dimen/list_margin"
        app:dividerInsetEnd="@dimen/list_margin"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintBottom_toTopOf="@id/ui_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ui_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/list_margin"
        android:layout_marginHorizontal="@dimen/list_margin"
        app:layout_constraintTop_toBottomOf="@id/div1"
        app:layout_constraintBottom_toTopOf="@id/button_clear_ui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear_ui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_margin"
        android:layout_marginBottom="@dimen/list_margin"
        android:text="@string/button_clear_ui"
        app:layout_constraintTop_toBottomOf="@id/ui_info"
        app:layout_constraintBottom_toTopOf="@id/div2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dividerInsetStart="@dimen/list_margin"
        app:dividerInsetEnd="@dimen/list_margin"
        app:layout_constraintTop_toBottomOf="@id/button_clear_ui"
        app:layout_constraintBottom_toTopOf="@id/config_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/config_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/list_margin"
        android:layout_marginHorizontal="@dimen/list_margin"
        app:layout_constraintTop_toBottomOf="@id/div2"
        app:layout_constraintBottom_toTopOf="@id/button_manage_config"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_manage_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_margin"
        android:layout_marginBottom="@dimen/list_margin"
        android:text="@string/button_manage_exported_configs"
        app:layout_constraintTop_toBottomOf="@id/config_info"
        app:layout_constraintBottom_toTopOf="@id/div3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dividerInsetStart="@dimen/list_margin"
        app:dividerInsetEnd="@dimen/list_margin"
        app:layout_constraintTop_toBottomOf="@id/button_manage_config"
        app:layout_constraintBottom_toTopOf="@id/language_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/language_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/list_margin"
        android:layout_marginHorizontal="@dimen/list_margin"
        app:layout_constraintTop_toBottomOf="@id/div3"
        app:layout_constraintBottom_toTopOf="@id/button_reset_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/list_margin"
        android:layout_marginBottom="@dimen/list_margin"
        android:text="@string/button_reset_language"
        app:layout_constraintTop_toBottomOf="@id/language_info"
        app:layout_constraintBottom_toTopOf="@id/misc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/misc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_margin"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>